--- a/DX_2D_YJY/DX_2D_YJY.vcxproj.filters
+++ b/DX_2D_YJY/DX_2D_YJY.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="Scene\TextureWVPScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Scene\SolarSystemScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX_2D_YJY.cpp">
@@ -120,6 +123,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scene\TextureWVPScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\SolarSystemScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
