--- a/DX_2D_YJY/DX_2D_YJY.vcxproj.filters
+++ b/DX_2D_YJY/DX_2D_YJY.vcxproj.filters
@@ -96,6 +96,12 @@
     <ClInclude Include="Framework\Texture\RasterizerState.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Framework\Component\Transform.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\DungreedScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX_2D_YJY.cpp">
@@ -162,6 +168,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Framework\Texture\RasterizerState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\Component\Transform.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\DungreedScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
