--- a/DX_2D_YJY/DX_2D_YJY.vcxproj
+++ b/DX_2D_YJY/DX_2D_YJY.vcxproj
@@ -236,7 +236,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Shaders\ColliderShader\ColliderVertexShaer.hlsl">
+    <FxCompile Include="Shaders\ColliderShader\ColliderVertexShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
