--- a/DX_2D_YJY/DX_2D_YJY.vcxproj.filters
+++ b/DX_2D_YJY/DX_2D_YJY.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClInclude Include="TypeDef.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Scene\TestScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX_2D_YJY.cpp">
@@ -335,6 +338,9 @@
     <ClCompile Include="Object\Dungreed\Character.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\TestScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DX_2D_YJY.rc">
@@ -420,7 +426,7 @@
     <Image Include="Resource\Player\player_die.png">
       <Filter>리소스 파일</Filter>
     </Image>
-    <Image Include="Resource\Player\player_idle.png">
+    <Image Include="Resource\player_idle.png">
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="Resource\Player\player_jump.png">
