--- a/DX_2D_YJY/DX_2D_YJY.vcxproj
+++ b/DX_2D_YJY/DX_2D_YJY.vcxproj
@@ -146,6 +146,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Utillty\DataManager.h" />
+    <ClInclude Include="Object\Dungreed\Enemy\Ghost.h" />
     <ClInclude Include="Object\BagicObject\Enemy.h" />
     <ClInclude Include="Object\Dungreed\Item\ItemIcon.h" />
     <ClInclude Include="Object\Dungreed\Item\Inventery.h" />
@@ -245,6 +246,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Framework\Utillty\DataManager.cpp" />
+    <ClCompile Include="Object\Dungreed\Enemy\Ghost.cpp" />
     <ClCompile Include="Object\BagicObject\Enemy.cpp" />
     <ClCompile Include="Object\Dungreed\Item\ItemIcon.cpp" />
     <ClCompile Include="Object\Dungreed\Item\Inventery.cpp" />
@@ -334,13 +336,14 @@
     <Image Include="Resource\Angle.png" />
     <Image Include="Resource\Button.png" />
     <Image Include="Resource\Creature\attack.png" />
-    <Image Include="Resource\Creature\attack_shot.png" />
+    <Image Include="Resource\Creature\Ghostattack.png" />
+    <Image Include="Resource\Creature\Ghostmove.png" />
+    <Image Include="Resource\Creature\GhostTwistAttack.png" />
+    <Image Include="Resource\Creature\GhostTwistMove.png" />
     <Image Include="Resource\Creature\idle.png" />
-    <Image Include="Resource\Creature\idle_shot.png" />
     <Image Include="Resource\Creature\leftidle.png" />
     <Image Include="Resource\Creature\leftmove.png" />
     <Image Include="Resource\Creature\move.png" />
-    <Image Include="Resource\Creature\move_shot.png" />
     <Image Include="Resource\earth.PNG" />
     <Image Include="Resource\Effects\BlueExplosion.png" />
     <Image Include="Resource\Effects\explosion.png" />
