--- a/DX_2D_YJY/DX_2D_YJY.vcxproj
+++ b/DX_2D_YJY/DX_2D_YJY.vcxproj
@@ -152,7 +152,7 @@
     <ClInclude Include="Object\Dungreed\Item\Inventery.h" />
     <ClInclude Include="Object\Dungreed\Item\Item.h" />
     <ClInclude Include="Object\BagicObject\Players.h" />
-    <ClInclude Include="Scene\PorfolioStartScreen.h" />
+    <ClInclude Include="Scene\ProjectScene.h" />
     <ClInclude Include="Scene\BagicScene\ItemScene.h" />
     <ClInclude Include="Object\Dungreed\Enemy\Creature.h" />
     <ClInclude Include="Object\GameObject\Bullet.h" />
@@ -252,7 +252,7 @@
     <ClCompile Include="Object\Dungreed\Item\Inventery.cpp" />
     <ClCompile Include="Object\Dungreed\Item\Item.cpp" />
     <ClCompile Include="Object\BagicObject\Players.cpp" />
-    <ClCompile Include="Scene\PorfolioStartScreen.cpp" />
+    <ClCompile Include="Scene\ProjectScene.cpp" />
     <ClCompile Include="Scene\BagicScene\ItemScene.cpp" />
     <ClCompile Include="Object\Dungreed\Enemy\Creature.cpp" />
     <ClCompile Include="Object\GameObject\Bullet.cpp" />
